fixed reference and mofified forms scroll overflow y to auto (#365)

--- a/source/css/scss-common/base/_forms.scss
+++ b/source/css/scss-common/base/_forms.scss
@@ -964,7 +964,7 @@ textarea {
   max-height: 300px;
   padding: 0 $spacer * 2 0 $spacer * 2;
   margin-top: 0;
-  overflow-y: scroll;
+  overflow-y: auto;
   border: 2px solid $blue-dark;
   border-top: none;
   border-radius: 0;
